cvpi_image_functions.h


#define CVPI_COLOR_SPACE VG_sARGB_8888
#define CVPI_PIXEL_BYTES 4
enum {cvpi_pixel_red = 2, cvpi_pixel_green = 1, cvpi_pixel_blue = 0, cvpi_pixel_alpha = 3};
enum {cvpi_pixel_v = 2, cvpi_pixel_u = 1, cvpi_pixel_y = 0};
extern const VGfloat cvpi_invert_colors[20];
extern const VGfloat cvpi_avuy2ayuv[20];
extern const VGfloat cvpi_pixel_average[20];
extern const VGfloat cvpi_pixel_color_average[20];
extern const VGfloat cvpi_channel_red[20];
extern const VGfloat cvpi_channel_green[20];
extern const VGfloat cvpi_channel_blue[20];
extern const VGfloat cvpi_channel_alpha[20];
extern const VGubyte cvpi_sqrt_array_floor[256];
extern const VGubyte cvpi_sqrt_array_ceil[256];
extern const VGubyte cvpi_sqrt_array_round[256];
extern const VGuint cvpi_binary_array[256];
extern const VGuint cvpi_binary_array_inverted[256];
extern const VGubyte cvpi_zeros_array[256]; 
extern const VGubyte cvpi_255_array[256];   
extern const VGubyte cvpi_identity_array[256]; 
extern const VGubyte cvpi_inversion_array[256]; 
extern const VGshort cvpi_filter_sobel_x[9];
extern const VGshort cvpi_filter_sobel_y[9];
extern const VGshort cvpi_filter_scharr_x[9];
extern const VGshort cvpi_filter_scharr_y[9];
extern const VGshort cvpi_filter_prewitt_x[9];
extern const VGshort cvpi_filter_prewitt_y[9];
extern const VGshort cvpi_filter_roberts_cross_x[4];
extern const VGshort cvpi_filter_roberts_cross_y[4];
VGImage cvpi_yuyv2yuva(const VGImage yuyv_image);
VGImage cvpi_add_images(const VGImage img1, const VGImage img2, VGshort a, VGshort b, VGfloat scale, VGfloat bias);
VGImage cvpi_add_channels(const VGImage image, VGImageChannel channel1, VGImageChannel channel2,
			  VGshort a, VGshort b, VGfloat scale, VGfloat bias, VGbitfield output_channels);
VGImage cvpi_add_channels_color(const VGImage image, VGfloat scale_r, VGfloat scale_g,
				VGfloat scale_b, VGfloat bias, VGbitfield output_channels);
VGImage cvpi_add_channels_all(const VGImage image, VGfloat scale_r, VGfloat scale_g,
			      VGfloat scale_b, VGfloat scale_a, VGfloat bias, VGbitfield output_channels);
VGImage cvpi_combine_channelwise(const VGImage img1, const VGImage img2, VGbitfield img1_channels);
VGImage cvpi_channel_threshold(const VGImage image, VGImageChannel channel, 
			       VGubyte bound1, VGubyte bound2, 
			       VGubyte fill, CVPI_BOOL invert);
VGImage cvpi_image_threshold(const VGImage image, 
			     const VGubyte* lower_bound, const VGubyte* upper_bound, 
			     const VGubyte* fill, const CVPI_BOOL* invert, CVPI_BOOL dependent);
VGImage cvpi_image_threshold_sector(const VGImage image, unsigned int sector_width,
				    unsigned int sector_height,
				    const VGubyte* fill, const CVPI_BOOL* invert, CVPI_BOOL dependent,
				    const VGuint (*statistic)(const VGImage image));
VGImage cvpi_image_threshold_adaptive(const VGImage image, unsigned int sector_width, unsigned int sector_height, 
				      const VGubyte* fill, const CVPI_BOOL* invert, CVPI_BOOL dependent, 
				      const VGuint (*statistic)(const VGImage image));
VGImage cvpi_image_channel_mask(const VGImage image, VGImageChannel maskChannel, CVPI_BOOL add);
VGImage cvpi_image_mean_gpu(const VGImage image);
VGImage cvpi_image_mean_arithmetic(const VGImage image);
VGImage cvpi_image_rgba_to_bw(const VGImage color_image, VGImageChannel sourceChannel, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_and(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_nand(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_or(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_nor(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_xor(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_xnor(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_complement(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
inline VGImage cvpi_image_logical_complement_inv(const VGImage image1, const VGImage image2, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
VGImage cvpi_image_dialate(const VGImage image, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
VGImage cvpi_image_erode(const VGImage image, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
VGImage cvpi_image_hit_miss(const VGImage image, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
VGImage cvpi_image_thin(const VGImage image, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
VGImage cvpi_image_thicken(const VGImage image, VGubyte t_c, VGubyte f_c, CVPI_BOOL nonzero_true);
VGubyte cvpi_channel_max(const VGImage image, VGImageChannel channel);
VGubyte cvpi_channel_min(const VGImage image, VGImageChannel channel);
VGubyte* cvpi_channel_max_min(const VGImage image, VGImageChannel channel);
unsigned int* cvpi_channel_histogram(const VGImage image, VGImageChannel channel);
unsigned int* cvpi_color_channels_histogram(const VGImage image);
unsigned int* cvpi_image_histogram(const VGImage image);
double* cvpi_channel_cumulative_distribution(const unsigned int* histogram, VGint width, VGint height);
double* cvpi_color_channels_cumulative_distribution(const unsigned int* histogram, VGint width, VGint height);
double* cvpi_image_cumulative_distribution(const unsigned int* histogram, VGint width, VGint height);
enum cvpi_integer_truncation {cvpi_floor, cvpi_ceil, cvpi_round};
VGImage cvpi_magnitude(const VGImage image1, const VGImage image2, enum cvpi_integer_truncation trunc);
typedef union {
  uint32_t all;
  uint16_t xy[2];
} cvpi_coordinate;
typedef struct {
  cvpi_coordinate* coordinates;
  unsigned long length;
} cvpi_coordinate_table;
cvpi_coordinate_table* cvpi_image_coordinate_table(const VGImage image, VGbitfield channels);
void cvpi_image_coordinate_table_destroy(cvpi_coordinate_table *coordinate_table);
typedef struct {
  double x;
  double y;
} cvpi_precise_coordinate;
typedef struct {
  cvpi_precise_coordinate* coordinates;
  unsigned long length;
} cvpi_precise_coordinate_table;
cvpi_precise_coordinate_table* cvpi_coordinate_table_lens_correct(const cvpi_coordinate_table *coordinate_table,
								  double k1, double k2, double p1, double p2, double k3);
void cvpi_precise_coordinate_table_destroy(cvpi_precise_coordinate_table *coordinate_table);
typedef struct {
  double radius;		
  double theta;
} cvpi_polar_coordinate;
typedef struct {
  cvpi_polar_coordinate* coordinates;
  unsigned long length;
} cvpi_polar_coordinate_table;
cvpi_polar_coordinate_table* cvpi_image_polar_coordinate_table(const cvpi_coordinate_table *ct);