bindings/chicken/cvpi/cvpi.scm


(define-foreign-variable CVPI_COLOR_SPACE (const int) "CVPI_COLOR_SPACE")
(define-foreign-variable CVPI_PIXEL_BYTES (const int) "CVPI_PIXEL_BYTES")
(define-foreign-variable cvpi_pixel_red (const int) "cvpi_pixel_red")
(define-foreign-variable cvpi_pixel_green (const int) "cvpi_pixel_green")
(define-foreign-variable cvpi_pixel_blue (const int) "cvpi_pixel_blue")
(define-foreign-variable cvpi_pixel_alpha (const int) "cvpi_pixel_alpha")
(define-foreign-variable cvpi_pixel_v (const int) "cvpi_pixel_v")
(define-foreign-variable cvpi_pixel_u (const int) "cvpi_pixel_u")
(define-foreign-variable cvpi_pixel_y (const int) "cvpi_pixel_y")
(define-foreign-variable cvpi_invert_colors (const VGfloat-vector) "cvpi_invert_colors")
(define-foreign-variable cvpi_avuy2ayuv (const VGfloat-vector) "cvpi_avuy2ayuv")
(define-foreign-variable cvpi_pixel_average (const VGfloat-vector) "cvpi_pixel_average")
(define-foreign-variable cvpi_pixel_color_average (const VGfloat-vector) "cvpi_pixel_color_average")
(define-foreign-variable cvpi_channel_red (const VGfloat-vector) "cvpi_channel_red")
(define-foreign-variable cvpi_channel_green (const VGfloat-vector) "cvpi_channel_green")
(define-foreign-variable cvpi_channel_blue (const VGfloat-vector) "cvpi_channel_blue")
(define-foreign-variable cvpi_channel_alpha (const VGfloat-vector) "cvpi_channel_alpha")
(define-foreign-variable cvpi_sqrt_array_floor (const VGubyte-vector) "cvpi_sqrt_array_floor")
(define-foreign-variable cvpi_sqrt_array_ceil (const VGubyte-vector) "cvpi_sqrt_array_ceil")
(define-foreign-variable cvpi_sqrt_array_round (const VGubyte-vector) "cvpi_sqrt_array_round")
(define-foreign-variable cvpi_binary_array (const VGuint-vector) "cvpi_binary_array")
(define-foreign-variable cvpi_binary_array_inverted (const VGuint-vector) "cvpi_binary_array_inverted")
(define-foreign-variable cvpi_zeros_array (const VGubyte-vector) "cvpi_zeros_array")
(define-foreign-variable cvpi_255_array (const VGubyte-vector) "cvpi_255_array")
(define-foreign-variable cvpi_identity_array (const VGubyte-vector) "cvpi_identity_array")
(define-foreign-variable cvpi_inversion_array (const VGubyte-vector) "cvpi_inversion_array")
(define-foreign-variable cvpi_filter_sobel_x (const VGshort-vector) "cvpi_filter_sobel_x")
(define-foreign-variable cvpi_filter_sobel_y (const VGshort-vector) "cvpi_filter_sobel_y")
(define-foreign-variable cvpi_filter_scharr_x (const VGshort-vector) "cvpi_filter_scharr_x")
(define-foreign-variable cvpi_filter_scharr_y (const VGshort-vector) "cvpi_filter_scharr_y")
(define-foreign-variable cvpi_filter_prewitt_x (const VGshort-vector) "cvpi_filter_prewitt_x")
(define-foreign-variable cvpi_filter_prewitt_y (const VGshort-vector) "cvpi_filter_prewitt_y")
(define-foreign-variable cvpi_filter_roberts_cross_x (const VGshort-vector) "cvpi_filter_roberts_cross_x")
(define-foreign-variable cvpi_filter_roberts_cross_y (const VGshort-vector) "cvpi_filter_roberts_cross_y")

(define cvpi_yuyv2yuva (foreign-lambda VGImage "cvpi_yuyv2yuva" (const VGImage)))
(define cvpi_add_images (foreign-lambda VGImage "cvpi_add_images"
			 (const VGImage) (const VGImage) VGshort VGshort VGfloat VGfloat))
(define cvpi_add_channels
  (lambda (image channel1 channel2 a b scale bias output_channels)
    (let ((c1 (int->VGImageChannel channel1)) (c2 (int->VGImageChannel channel2)))
      ((foreign-lambda VGImage "cvpi_add_channels"
		       (const VGImage) VGImageChannel VGImageChannel VGshort VGshort VGfloat VGfloat VGbitfield)
       image c1 c2 a b scale bias output_channels))))
;
(define cvpi_add_channels_color (foreign-lambda VGImage "cvpi_add_channels_color"
						(const VGImage) VGfloat VGfloat VGfloat VGfloat VGbitfield))
(define cvpi_add_channels_all (foreign-lambda VGImage "cvpi_add_channels_all"
					      (const VGImage) VGfloat VGfloat VGfloat VGfloat VGfloat VGbitfield))
(define cvpi_combine_channelwise (foreign-lambda VGImage "cvpi_combine_channelwise"
						 (const VGImage) (const VGImage) VGbitfield))
(define cvpi_channel_threshold
  (lambda (image channel bound1 bound2 fill invert)
    (let ((c (int->VGImageChannel channel)))
      ((foreign-lambda VGImage "cvpi_channel_threshold"
		       (const VGImage) VGImageChannel VGubyte VGubyte VGubyte CVPI_BOOL)
       image c bound1 bound2 fill invert))))
(define cvpi_image_threshold
  (foreign-lambda VGImage "cvpi_image_threshold"
		  (const VGImage) (const VGubyte-vector) (const VGubyte-vector)
		  (const VGubyte-vector) (const (c-pointer CVPI_BOOL)) CVPI_BOOL))
(define cvpi_image_threshold_sector
  (foreign-lambda VGImage "cvpi_image_threshold_sector"
		  (const VGImage) unsigned-int unsigned-int
		  (const VGubyte-vector) (const (c-pointer CVPI_BOOL)) CVPI_BOOL
		  (const (function VGuint ((const VGImage))))))


(define cvpi_image_channel_mask 
  (lambda (image maskChannel add)
    (let ((mc (int->VGImageChannel maskChannel)))
      ((foreign-lambda VGImage "cvpi_image_channel_mask"
		       (const VGImage) VGImageChannel CVPI_BOOL)
       image mc add))))
(define cvpi_image_mean_gpu (foreign-lambda VGImage "cvpi_image_mean_gpu"(const VGImage)))
(define cvpi_image_mean_arithmetic (foreign-lambda VGImage "cvpi_image_mean_arithmetic" (const VGImage)))
(define cvpi_image_rgba_to_bw
  (lambda (color_image sourceChannel nonzero_true)
    (let ((sc (int->VGImageChannel sourceChannel)))
      ((foreign-lambda VGImage "cvpi_image_rgba_to_bw"
		       (const VGImage) VGImageChannel CVPI_BOOL)
       color_image sc nonzero_true))))

(define cvpi_image_logical_and (foreign-lambda VGImage "cvpi_image_logical_and"
					       (const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_logical_nand (foreign-lambda VGImage "cvpi_image_logical_nand"
						(const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_logical_or (foreign-lambda VGImage "cvpi_image_logical_or"
					      (const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_logical_nor (foreign-lambda VGImage "cvpi_image_logical_nor"
					       (const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_logical_xor (foreign-lambda VGImage "cvpi_image_logical_xor"
					       (const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_logical_xnor (foreign-lambda VGImage "cvpi_image_logical_xnor"
						(const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_logical_complement (foreign-lambda VGImage "cvpi_image_logical_complement"
						      (const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_logical_complement_inv (foreign-lambda VGImage "cvpi_image_logical_complement_inv"
							  (const VGImage) (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_dialate (foreign-lambda VGImage "cvpi_image_dialate"
					   (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_erode (foreign-lambda VGImage "cvpi_image_erode"
					 (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_hit_miss (foreign-lambda VGImage "cvpi_image_hit_miss"
					    (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_thin (foreign-lambda VGImage "cvpi_image_thin"
					(const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_image_thicken (foreign-lambda VGImage "cvpi_image_thicken"
					   (const VGImage) VGubyte VGubyte CVPI_BOOL))
(define cvpi_channel_max
  (lambda (image channel)
    (let ((c (int->VGImageChannel channel)))
      ((foreign-lambda VGubyte "cvpi_channel_max"
		       (const VGImage) VGImageChannel)
       image c))))
(define cvpi_channel_min
  (lambda (image channel)
    (let ((c (int->VGImageChannel channel)))
      ((foreign-lambda VGubyte "cvpi_channel_min" (const VGImage) VGImageChannel)
       image c))))
(define cvpi_channel_max_min
  (lambda (image channel)
    (let ((c (int->VGImageChannel channel)))
      ((foreign-lambda VGubyte-vector "cvpi_channel_max_min" (const VGImage) VGImageChannel)
       image c))))


(define cvpi_channel_histogram
  (lambda (image channel)
    (let ((c (int->VGImageChannel channel)))
      ((foreign-lambda (c-pointer uint32_t) "cvpi_channel_histogram" (const VGImage) VGImageChannel)
       image c))))
(define cvpi_color_channels_histogram
  (foreign-lambda (c-pointer uint32_t) "cvpi_color_channels_histogram" (const VGImage)))
(define cvpi_image_histogram
  (foreign-lambda (c-pointer uint32_t) cvpi_image_histogram (const VGImage)))
(define cvpi_channel_cumulative_distribution
  (foreign-lambda (c-pointer double) "cvpi_channel_cumulative_distribution" (const u32vector) VGint VGint))
(define cvpi_color_channels_cumulative_distribution
  (foreign-lambda (c-pointer double) "cvpi_color_channels_cumulative_distribution" (const u32vector) VGint VGint))
(define cvpi_image_cumulative_distribution
  (foreign-lambda (c-pointer double) "cvpi_image_cumulative_distribution" (const u32vector) VGint VGint))


(define-foreign-enum-type (cvpi_integer_truncation int cvpi_floor)
  (cvpi_integer_truncation->int int->cvpi_integer_truncation)
  cvpi_floor cvpi_ceil cvpi_round)
(define cvpi_magnitude
  (lambda (image1 image2 int-truncation)
    (let ((trunc (int->cvpi_integer_truncation int-truncation)))
      ((foreign-lambda VGImage "cvpi_magnitude" (const VGImage) (const VGImage) cvpi_integer_truncation)
       image1 image2 trunc))))

;; typedef union {
;;   uint32_t all
;;   uint16_t xy[2]
;; } cvpi_coordinate

(define-foreign-type cvpi_coordinate (union "cvpi_coordinate"))

;; typedef struct {
;;   cvpi_coordinate* coordinates
;;   unsigned long length
;; } cvpi_coordinate_table
(define-foreign-type cvpi_coordinate_table (struct "cvpi_coordinate_table"))

;; cvpi_coordinate_table* cvpi_image_coordinate_table(const VGImage image, VGbitfield channels)
(define cvpi_image_coordinate_table
  (foreign-lambda (c-pointer cvpi_coordinate_table) "cvpi_image_coordinate_table"
		  (const VGImage) VGbitfield))

;; void cvpi_image_coordinate_table_destroy(cvpi_coordinate_table *coordinate_table)
(define cvpi_image_coordinate_table_destroy
  (foreign-lambda void "cvpi_image_coordinate_table_destroy" (c-pointer cvpi_coordinate_table)))

;; typedef struct {
;;   double x
;;   double y
;; } cvpi_precise_coordinate
(define-foreign-type cvpi_precise_coordinate (struct "cvpi_precise_coordinate"))

;; typedef struct {
;;   cvpi_precise_coordinate* coordinates
;;   unsigned long length
;; } cvpi_precise_coordinate_table
(define-foreign-type cvpi_precise_coordinate_table (struct "cvpi_precise_coordinate_table"))

;; cvpi_precise_coordinate_table* cvpi_coordinate_table_lens_correct(const cvpi_coordinate_table *coordinate_table,
;; 								  double k1, double k2, double p1, double p2, double k3)
(define cvpi_coordinate_table_lens_correct
  (foreign-lambda (c-pointer cvpi_precise_coordinate_table) "cvpi_coordinate_table_lens_correct"
		  (const (c-pointer cvpi_coordinate_table))
		  double double double double double))

;; void cvpi_precise_coordinate_table_destroy(cvpi_precise_coordinate_table *coordinate_table)
(define cvpi_precise_coordinate_table_destroy
  (foreign-lambda void "cvpi_precise_coordinate_table_destroy"
		  (c-pointer cvpi_precise_coordinate_table)))

;; typedef struct {
;;   double radius		
;;   double theta
;; } cvpi_polar_coordinate
(define-foreign-type cvpi_polar_coordinate (struct "cvpi_polar_coordinate"))

;; typedef struct {
;;   cvpi_polar_coordinate* coordinates
;;   unsigned long length
;; } cvpi_polar_coordinate_table
(define-foreign-type cvpi_polar_coordinate_table (struct "cvpi_polar_coordinate_table"))

;; cvpi_polar_coordinate_table* cvpi_image_polar_coordinate_table(const cvpi_coordinate_table *ct)
(define cvpi_image_polar_coordinate_table
  (foreign-lambda (c-pointer cvpi_polar_coordinate_table) "cvpi_image_polar_coordinate_table"
		  (const (c-pointer cvpi_coordinate_table))))
